fixed spacing

--- a/portfolio4.0/src/views/projectPage.css
+++ b/portfolio4.0/src/views/projectPage.css
@@ -7,7 +7,7 @@
     justify-content: center;
     text-align: left;
     width: 100%;
-    padding-top: 15%;
+    padding-top: 10%;
     color: white;
 }
 .projectLeft {
